@@ -2,13 +2,14 @@ package de.tudresden.geoinfo.fusion.operation.retrieval.ows;
 
 import de.tudresden.geoinfo.fusion.data.IData;
 import de.tudresden.geoinfo.fusion.data.literal.LongLiteral;
-import de.tudresden.geoinfo.fusion.data.literal.URILiteral;
-import de.tudresden.geoinfo.fusion.data.ows.WPSProcessDescriptions;
+import de.tudresden.geoinfo.fusion.data.literal.URLLiteral;
+import de.tudresden.geoinfo.fusion.data.ows.WPSDescribeProcess;
 import de.tudresden.geoinfo.fusion.data.rdf.IIdentifier;
 import org.junit.Assert;
 import org.junit.Test;
 
-import java.net.URI;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -20,7 +21,7 @@ public class WPSDescriptionParserTest {
     private final static String OUT_RUNTIME = "OUT_RUNTIME";
 
     @Test
-    public void readWPSDescription() {
+    public void readWPSDescription() throws MalformedURLException {
 
         WPSDescriptionParser parser = new WPSDescriptionParser();
         IIdentifier ID_IN_RESOURCE = parser.getInputConnector(IN_RESOURCE).getIdentifier();
@@ -28,15 +29,15 @@ public class WPSDescriptionParserTest {
         IIdentifier ID_OUT_RUNTIME = parser.getOutputConnector(OUT_RUNTIME).getIdentifier();
 
         Map<IIdentifier, IData> input = new HashMap<>();
-        input.put(ID_IN_RESOURCE, new URILiteral(URI.create("http://geoprocessing.demo.52north.org/latest-wps/WebProcessingService?Request=DescribeProcess&Service=WPS&version=1.0.0&identifier=neighborhooddiversity")));
+        input.put(ID_IN_RESOURCE, new URLLiteral(new URL("http://geoprocessing.demo.52north.org/latest-wps/WebProcessingService?Request=DescribeProcess&Service=WPS&version=1.0.0&identifier=neighborhooddiversity")));
 
         Map<IIdentifier, IData> output = parser.execute(input);
 
         Assert.assertNotNull(output);
         Assert.assertTrue(output.containsKey(ID_OUT_DESCRIPTION));
-        Assert.assertTrue(output.get(ID_OUT_DESCRIPTION) instanceof WPSProcessDescriptions);
+        Assert.assertTrue(output.get(ID_OUT_DESCRIPTION) instanceof WPSDescribeProcess);
 
-        WPSProcessDescriptions description = (WPSProcessDescriptions) output.get(ID_OUT_DESCRIPTION);
+        WPSDescribeProcess description = (WPSDescribeProcess) output.get(ID_OUT_DESCRIPTION);
         Assert.assertTrue(description.getProcessIdentifier().size() == 1);
 
         Runtime runtime = Runtime.getRuntime();
